--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 # misc
 .DS_Store
 *.pem
+*.drawio.bkp
 
 # debug
 npm-debug.log*
@@ -32,7 +33,7 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
 
 # vercel
