--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seedOffices.ts"
+  },
   "dependencies": {
     "@bcgov/design-system-react-components": "^0.5.1",
     "@emotion/react": "^11.14.0",
@@ -22,7 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.8",
+    "@tailwindcss/postcss": "^4.0.9",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -30,7 +33,8 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "prisma": "^6.4.1",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.0.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
